[package]
name = "fool"
version = "0.0.3"
edition = "2018"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/olson-sean-k/fool"
description = "Traits for interoperation of Boolean and sum types."
keywords = [
    "boolean",
    "conversion",
    "extension",
    "option",
    "result"
]
categories = [
    "no-std",
    "rust-patterns"
]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
bare = []
zip = ["itertools"]

[dependencies]

[dependencies.itertools]
default-features = false
features = []
optional = true
version = "^0.9.0"
